# frostbit

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  compile_commands.json  compile_commands_.json  make.bat  notes.md
res/: debug.tmx  guy-jump.tsx  guy-running.tsx  guy.tsx  level1.tmx  obstacles.tsx  tilemap.tiled-session  tileset.tsx  ui.tsx
src/: arena.c  arena.h  array.c  array.h  asset_store.c  asset_store.h  component.c  component.h  engine.c  engine.h  entity.c  entity.h  entity_manager.h  event-bus.h  event_bus.c  event_bus.h  eventbus.c  eventbus.h  game.c  game.h  gfx.c  gfx.h  graphics.c  graphics.h  main.c  state.c  state.h  state_manager.c  state_manager.h  system.c  system.h  texture.c  texture.h  tilemap.c  tilemap.h  vector.c  vector.h
src/components/: boxcollider_component.h  keyboard_control_component.h  rigidbody_component.h  sprite_component.h  transform_component.h
src/systems/: collision_system.c  collision_system.h  keyboard_control_system.c  keyboard_control_system.h  movement_system.c  movement_system.h  render_collider_system.c  render_collider_system.h  render_system.c  render_system.h
src/utils/: utils.c  utils.h
